--- a/src/styles/_vars.sass
+++ b/src/styles/_vars.sass
@@ -6,3 +6,5 @@ $textcolor: #ffffffb8
 $lineheight: 1.65 // Document Line Height
 $userfont: iviSans // User Font Family
 $systemfont: -apple-system, BlinkMacSystemFont, Arial, sans-serif // System Font Family
+$background: #100e19
+$primaryColor: rgba(255,255,255,.48)
