feat: add dropdown navigation links

--- a/src/components/Header/Actions/Actions.module.sass
+++ b/src/components/Header/Actions/Actions.module.sass
@@ -3,30 +3,22 @@
     display: flex
     align-items: center
     gap: 20px
-  &__button
-    cursor: pointer
-    height: 32px
-    border-width: 1px
-    border-radius: 8px
-    padding: 7px 11px
-    font-size: 13px
-    line-height: 16px
-    font-weight: 500
-    font-style: normal
-    color: #fff
-    background-color: #ea003d
-    background-image: linear-gradient(270deg,#ea003d 0,#c447ff 100%)
   &__search
     display: flex
     gap: 5px
     cursor: pointer
+    transition: .4s
+    &:hover
+      color: #fff
     .search
       &__icon
         width: 24px
         height: 24px
-      &__text
   &__notifications
     cursor: pointer
+    transition: .4s
+    &:hover
+      color: #fff
     svg
       width: 24px
       height: 24px
@@ -36,6 +28,10 @@
     border-radius: 8px
     border: 2px solid rgba(255,255,255,.48)
     padding: 12px
+    transition: .4s
+    &:hover
+      color: #fff
+      border-color: #fff
     svg
       width: 20px
       height: 20px
