feat: add filters dropdown

--- a/src/components/Header/DropDown/DropDown.module.sass
+++ b/src/components/Header/DropDown/DropDown.module.sass
@@ -1,5 +1,7 @@
 .genres
   &__container
+    display: flex
     background: #1F1B2E
     border-radius: 0 0 15px 15px
-    min-height: 392px
+    padding: 20px
+    max-height: 392px
