feat: add some styles

--- a/src/components/Header/DropDown/DropDown.module.sass
+++ b/src/components/Header/DropDown/DropDown.module.sass
@@ -1,7 +1,11 @@
 .genres
   &__container
     display: flex
+    position: absolute
+    width: 100%
+    z-index: 999
     background: #1F1B2E
     border-radius: 0 0 15px 15px
     padding: 20px
+    height: 392px
     max-height: 392px
