--- a/src/components/Header/DropDown/Links/Links.module.sass
+++ b/src/components/Header/DropDown/Links/Links.module.sass
@@ -9,17 +9,20 @@
 
 .links__container
   display: flex
+  gap: 10px
   flex-direction: column
   flex-wrap: wrap
 
   .list__item
     display: flex
     font-size: 15px
-    flex-basis: 50%
     line-height: 20px
     font-weight: 400
 
 .links__container__row
   display: flex
+  width: 500px
   flex-direction: row
   flex-wrap: wrap
+  .list__item
+    flex-basis: 40%
