--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -1,18 +1,20 @@
 @use 'src/styles/vars'
 
 .header
-  display: flex
-  padding: 0 12px
-  align-items: center
-  justify-content: space-between
-  color: vars.$primaryColor
-  background: vars.$background
-  width: 100%
-  height: 72px
-  font-size: 15px
-  line-height: 20px
-  font-weight: 500
-  font-style: normal
+  position: relative
+  &__content
+    display: flex
+    padding: 0 12px
+    align-items: center
+    justify-content: space-between
+    color: vars.$primaryColor
+    background: vars.$background
+    width: 100%
+    height: 72px
+    font-size: 15px
+    line-height: 20px
+    font-weight: 500
+    font-style: normal
   &__navigation
     display: flex
     align-items: center
