--- a/src/components/Header/DropDown/DropDown.module.sass
+++ b/src/components/Header/DropDown/DropDown.module.sass
@@ -6,6 +6,7 @@
     z-index: 999
     background: #1F1B2E
     border-radius: 0 0 15px 15px
+    border-top: 1px solid rgba(255,255,255,.16)
     padding: 20px
     height: 392px
     max-height: 392px
