--- a/src/components/Header/DropDown/Links/Links.module.sass
+++ b/src/components/Header/DropDown/Links/Links.module.sass
@@ -1,3 +1,5 @@
+@use 'src/styles/vars'
+
 .list
   &__container
     width: 500px
@@ -16,8 +18,13 @@
   .list__item
     display: flex
     font-size: 15px
+    color: vars.$primaryColor
     line-height: 20px
     font-weight: 400
+    cursor: pointer
+    transition-duration: .4s
+    &:hover
+      color: #fff
 
 .links__container__row
   display: flex
