--- a/src/components/Footer/FooterButtons/PhonesList/PhonesList.module.sass
+++ b/src/components/Footer/FooterButtons/PhonesList/PhonesList.module.sass
@@ -2,23 +2,15 @@
 
 .list
   position: absolute
-  bottom: 0
+  bottom: -12px
   padding-block: 8px
   background: #1f1b2e
   transform: translate(0, 100%)
-  transition: all .15s linear
-  opacity: 0
-  visibility: hidden
   border-radius: 8px
   width: 196px
 
   & a
     color: vars.$textcolor 
-    text-decoration: none
-
-  &_active
-    visibility: visible
-    opacity: 1
 
   &__phone
     cursor: pointer
