feat: add basic tv dropdown

--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -27,6 +27,8 @@
     position: relative
     z-index: 999
     opacity: 0
+    visibility: hidden
     transition: opacity .4s ease-in-out
   &__dropdown_active
     opacity: 1
+    visibility: visible
