--- a/src/components/Header/DropDown/DropDown.module.sass
+++ b/src/components/Header/DropDown/DropDown.module.sass
@@ -9,7 +9,7 @@
     background: #1F1B2E
     border-radius: 0 0 15px 15px
     border-top: 1px solid rgba(255,255,255,.16)
-    padding: 20px
+    padding: 20px 0 20px 20px
     height: 392px
     max-height: 392px
   &__notification
