--- a/src/components/Header/DropDown/Tabs/Tabs.module.sass
+++ b/src/components/Header/DropDown/Tabs/Tabs.module.sass
@@ -7,6 +7,7 @@
   &__item
     color: vars.$primaryColor
     cursor: pointer
+    margin-left: -1px
     transition: .4s
     padding-left: 10px
     &:hover
