fix: banner styles

--- a/src/components/BannerSlider/BannerSlide/BannerSlide.module.sass
+++ b/src/components/BannerSlider/BannerSlide/BannerSlide.module.sass
@@ -8,7 +8,7 @@
     position: relative
     overflow: hidden
     transition: .3s
-    &::after
+    &::before
         content: ''
         display: block
         z-index: 3
