--- a/src/components/IviOnlineCinema/IviOnlineCinema.module.sass
+++ b/src/components/IviOnlineCinema/IviOnlineCinema.module.sass
@@ -53,3 +53,11 @@
     cursor: pointer
     font-size: 15px
     font-weight: 500
+
+@media (max-width: 1019px)
+    .section__container
+        width: 100%
+
+@media (max-width: 600px)
+    .section__title
+        font-size: 15px
