- feat: custom button className - feat: custom button pattern type - fix: add provider in _app - fix: footer mailto, columns

--- a/src/UI/CustomButton/CustomButton.module.sass
+++ b/src/UI/CustomButton/CustomButton.module.sass
@@ -40,3 +40,13 @@
     &:hover, &:focus-visible
       background: #ff0f4d
       border-color: #ff0f4d
+
+  &_pattern
+    background-image: url('/images/promoButtonPattern.svg')
+    background-size: auto 48px
+    border-color: transparent
+
+    &:hover, &:focus-visible
+      background-image: url('/images/promoButtonPattern.svg')
+      background-color: #231f34
+      border-color: transparent
