--- a/src/components/Footer/FooterTop/FooterTop.module.sass
+++ b/src/components/Footer/FooterTop/FooterTop.module.sass
@@ -1,6 +1,7 @@
 .top
   display: grid
   grid-template-columns: 1fr 1fr 1fr 1fr
+  gap: 15px
   padding-block: 48px
   border-block: 1px solid rgba(255,255,255,.16)
 
