fix: footer widget styles

--- a/src/components/Footer/FooterWidget/FooterWidget.module.sass
+++ b/src/components/Footer/FooterWidget/FooterWidget.module.sass
@@ -17,6 +17,12 @@ $end: #834CC2
     background: linear-gradient(180deg, $start 0%, $end 100%)
     box-shadow: 0 0 104px $end
 
+  &__slash
+    position: absolute
+    left: 0
+    top: 4px
+    transform: rotate(110deg)
+
   &__svg
     display: flex
     color: white
