--- a/src/components/Footer/FooterCopyright/FooterCopyright.module.sass
+++ b/src/components/Footer/FooterCopyright/FooterCopyright.module.sass
@@ -3,3 +3,9 @@
   font-size: 15px
   line-height: 20px
   color: rgba(255,255,255,.48)
+
+@media (0 < width < 1159px)
+  .copyright
+    font-size: 13px
+    line-height: 16px
+    color: #312b45
