refactor: custom button component

--- a/src/UI/CustomButton/CustomButton.module.sass
+++ b/src/UI/CustomButton/CustomButton.module.sass
@@ -14,6 +14,11 @@
   font-size: vars.$fontsize
   font-weight: 500
   transition: .4s
+  height: 40px
+  padding: 9px 15px
+  font-size: 15px
+  line-height: 20px
+  border-radius: 8px
 
   &:focus-visible
     outline: 0
@@ -27,6 +32,10 @@
     width: 100%
 
   &_purple
+    font-size: 13px
+    line-height: 16px
+    height: 32px
+    padding: 7px 11px
     background: linear-gradient(270deg,#ea003d 0,#c447ff 100%)
     border: transparent
 
@@ -50,3 +59,7 @@
       background-image: url('/images/promoButtonPattern.svg')
       background-color: #231f34
       border-color: transparent
+
+  &_icon
+    width: 40px
+    padding: 0
