style: add style to action component

--- a/src/components/Header/DropDown/DropDown.module.sass
+++ b/src/components/Header/DropDown/DropDown.module.sass
@@ -26,3 +26,16 @@
     &_text
       font-size: 15px
       color: vars.$primaryColor
+  &-enter
+    opacity: 0
+
+    &-active
+      opacity: 1
+      transition: .4s
+
+    &-exit
+      opacity: 1
+
+      &-active
+        opacity: 0
+        transition: .4s
