fix: custom button, search button

--- a/src/UI/CustomButton/CustomButton.module.sass
+++ b/src/UI/CustomButton/CustomButton.module.sass
@@ -8,7 +8,7 @@
 .btn
   @include flexDef
   cursor: pointer
-  background: #1f1b2e
+  background-color: #1f1b2e
   border: 1px solid #1f1b2e
   color: white
   font-size: vars.$fontsize
@@ -24,7 +24,7 @@
     outline: 0
 
   &:hover, &:focus-visible
-    background: #2e2844
+    background-color: #2e2844
     border-color: #2e2844
 
   &__content
@@ -37,17 +37,17 @@
     height: 32px
     padding: 7px 11px
     background: linear-gradient(270deg,#ea003d 0,#c447ff 100%)
-    border: transparent
+    border-color: transparent
 
     &:hover, &:focus-visible
       background: linear-gradient(270deg,#ea003d 0,#c447ff 100%)
 
   &_red
-    background: vars.$accent
-    border: vars.$accent
+    background-color: vars.$accent
+    border-color: vars.$accent
    
     &:hover, &:focus-visible
-      background: #ff0f4d
+      background-color: #ff0f4d
       border-color: #ff0f4d
 
   &_pattern
