fix: custom button styles

--- a/src/UI/CustomButton/CustomButton.module.sass
+++ b/src/UI/CustomButton/CustomButton.module.sass
@@ -50,15 +50,13 @@
       background-color: #ff0f4d
       border-color: #ff0f4d
 
-  &_pattern
-    background-image: url('/images/promoButtonPattern.svg')
+  &_promo
     background-size: auto 48px
-    border-color: transparent
+    border: none
 
     &:hover, &:focus-visible
-      background-image: url('/images/promoButtonPattern.svg')
       background-color: #231f34
-      border-color: transparent
+      border: none
 
   &_icon
     width: 40px
