--- a/src/components/RegistrationModal/RegistrationModal.module.sass
+++ b/src/components/RegistrationModal/RegistrationModal.module.sass
@@ -1,9 +1,11 @@
 .chat
   &__container
     position: absolute
+    display: flex
+    flex-direction: column
+    align-items: center
     left: 0
     min-height: 100%
     width: 100vw
     z-index: 3
-    background-color: #07050e
-    opacity: 0.97
+    background-color: rgba(7, 5, 14, 0.97)
