--- a/src/styles/_config.sass
+++ b/src/styles/_config.sass
@@ -16,6 +16,7 @@
 @include font('iviSans', normal, 500, '../assets/fonts/iviSans-Medium.woff2')
 @include font('iviSans', normal, 700, '../assets/fonts/iviSans-Bold.woff2')
 @include font('ivi-icons', normal, 400, '../assets/fonts/ivi-icons.woff')
+@include font('iconfont', normal, 400, '../assets/fonts/iconfont.woff')
 
 // GENERAL CSS SETTINGS
 ::placeholder
