refactor: cinema details

--- a/src/components/PromoPlate/PromoPlate.module.sass
+++ b/src/components/PromoPlate/PromoPlate.module.sass
@@ -57,5 +57,5 @@
                 margin-bottom: 0
 
 @media (max-width: 342px)
-    .link__icon_present
+    .button__icon_present
         display: none
