--- a/src/components/RegistrationModal/ChatDialogue/ChatDialogue.module.sass
+++ b/src/components/RegistrationModal/ChatDialogue/ChatDialogue.module.sass
@@ -22,12 +22,22 @@
       font-size: 13px
       line-height: 16px
   &__input
+    position: absolute
+    cursor: pointer
+    bottom: 5px
+    left: 29px
+    color: #1f1b2e
+    font-size: 15px
+    line-height: 20px
+    font-weight: 700
+    font-style: normal
     background-color: #e8f0fe
     &__container
       width: 290px
       margin-top: 30px
     &__content
       position: relative
+      cursor: pointer
       width: 100%
       height: 40px
       color: #1f1b2e
@@ -41,6 +51,7 @@
       color: #a5a1b2
       position: absolute
       transform-origin: 0 0
+      z-index: 2
       font-size: 15px
       line-height: 20px
       font-weight: 500
@@ -51,9 +62,7 @@
       will-change: transform
       pointer-events: none
       top: 10px
-      left: 10px
-      &_active
-        transform: translate3d(0,-8px,0) scale(.86666667) perspective(1px)
+      left: 29px
     &__icon
       font-family: iconfont, sans-serif
       font-size: 16px
@@ -62,6 +71,8 @@
         content: "\E050"
     &_block
       display: flex
+      margin-left: 10px
+      line-height: 40px
   &__button
     width: 100%
     margin-top: 10px
@@ -78,3 +89,9 @@
       color: #fff
     &:hover
       background-color: #7e798f
+
+.input_active
+  cursor: auto
+.placeholder_active
+  transition: .3s
+  transform: translate3d(0,-8px,0) scale(.86666667) perspective(1px)
