--- a/src/components/Header/HeaderWidget/WidgetBanners/WidgetBanners.module.sass
+++ b/src/components/Header/HeaderWidget/WidgetBanners/WidgetBanners.module.sass
@@ -17,25 +17,19 @@ $bannersCount: 3
 .banners
   display: flex
   align-items: center
-  width: calc($bannersCount * (128 + 8)) + px
+  width: calc($bannersCount * 136px)
   position: relative
   height: 80px
 
-  &__primary, &__secondary
+  &__banner
     display: flex
     gap: 8px
     position: absolute
     will-change: transform
-
-  &__primary
     animation: primary calc($bannersCount * 12s) linear infinite
 
-    &_reverse
-      animation-direction: reverse
-      animation-duration: calc($bannersCount * 18s)
-
-  &__secondary
-    animation: secondary calc($bannersCount * 12s) linear infinite
+    &:nth-child(2)
+      animation-name: secondary
 
     &_reverse
       animation-direction: reverse
