feat: add adaptive for header, fix styles for dropdowns

--- a/src/components/Header/Actions/Actions.module.sass
+++ b/src/components/Header/Actions/Actions.module.sass
@@ -4,35 +4,44 @@
     align-items: center
     height: 100%
     gap: 20px
+
   &__search
     display: flex
     gap: 5px
     cursor: pointer
     transition: .4s
+
     &:hover
       color: #fff
+
     .search
       &__icon
         width: 24px
         height: 24px
+
   &__notifications
     cursor: pointer
     transition: .4s
+
     &:hover
       color: #fff
+
     svg
       width: 24px
       height: 24px
+
   &__profile
     cursor: pointer
     height: 48px
     border-radius: 8px
-    border: 2px solid rgba(255,255,255,.48)
+    border: 2px solid rgba(255, 255, 255, .48)
     padding: 12px
     transition: .4s
+
     &:hover
       color: #fff
       border-color: #fff
+
     svg
       width: 20px
       height: 20px
