--- a/src/components/Header/DropDown/DropDown.module.sass
+++ b/src/components/Header/DropDown/DropDown.module.sass
@@ -3,6 +3,7 @@
 .dropdown
   &__container
     display: flex
+    justify-content: space-between
     position: absolute
     width: 100%
     z-index: 2
