--- a/src/components/Header/DropDown/LinkList/LinkList.module.sass
+++ b/src/components/Header/DropDown/LinkList/LinkList.module.sass
@@ -1,8 +1,8 @@
-.second__container
+.list
+  display: grid
+  grid-template-columns: 1fr 1fr
+
+.list__container
   display: flex
-  width: 200px
   flex-direction: column
-  gap: 40px
-  margin-left: -100px
-  &>div:nth-child(1)
-    height: 170px
+  gap: 20px
