--- a/src/components/Header/DropDown/ProfileDropDown/ProfileDropDown.module.sass
+++ b/src/components/Header/DropDown/ProfileDropDown/ProfileDropDown.module.sass
@@ -5,6 +5,7 @@
     display: flex
     width: 100%
     height: 80%
+
   &__main
     display: flex
     flex-wrap: wrap
@@ -20,7 +21,7 @@
       padding: 20px
       background: #312B45
       border-radius: 8px
-      transition:  0.2ms
+      transition: 0.3s
 
       &:hover
         background: #3d3656
@@ -42,8 +43,10 @@
     padding-left: 10px
     flex-grow: 1
     border-left: 1px solid rgba(255, 255, 255, .16)
+
     button
       margin-right: 10px
+
     &_links
       display: flex
       flex-direction: column
