--- a/src/components/Header/DropDown/TvDropDown/TvSlider/TvSlider.module.sass
+++ b/src/components/Header/DropDown/TvDropDown/TvSlider/TvSlider.module.sass
@@ -1,3 +1,10 @@
+@mixin shadowMixin
+  position: absolute
+  width: 60px
+  height: 100%
+  z-index: 1
+  pointer-events: none
+
 .channels
   &__item
     width: 100px
@@ -9,18 +16,23 @@
     align-items: center
     overflow: visible
 
-    &_shadow
-      position: absolute
-      right: -20px
-      z-index: 1
-      background-image: linear-gradient(90deg, rgba(31, 27, 46, 0) 0, #1f1b2e 100%)
-      width: 60px
-      height: 100%
-
     &_item
       border-radius: 8px
-    &_buttons
-      position: absolute
-      top: 0
-      z-index: 2
-      overflow: visible
+
+.button
+  &_prev, &_next
+    i
+      &:after
+        font-size: 18px
+
+.slider
+  &__shadow
+    &_left
+      @include shadowMixin
+      left: -20px
+      background-image: linear-gradient(270deg, rgba(31, 27, 46, 0), #1f1b2e)
+
+    &_right
+      @include shadowMixin
+      right: -20px
+      background-image: linear-gradient(90deg, rgba(31, 27, 46, 0) 0, #1f1b2e 100%)
