--- a/src/components/RegistrationModal/ChatHeader/ChatHeader.module.sass
+++ b/src/components/RegistrationModal/ChatHeader/ChatHeader.module.sass
@@ -31,6 +31,6 @@
     height: 2px
     background-color: #312b45
     .progress__bar
-      width: 10%
       height: 100%
       background-color: #ea003d
+      transition: .3s
