--- a/src/components/RegistrationModal/RegistrationModal.module.sass
+++ b/src/components/RegistrationModal/RegistrationModal.module.sass
@@ -4,8 +4,9 @@
     display: flex
     flex-direction: column
     align-items: center
+    top: 0
     left: 0
     min-height: 100%
     width: 100vw
     z-index: 3
-    background-color: rgba(7, 5, 14, 0.97)
+    background-color: rgba(7, 5, 14, 0.99)
