feat: add animation for email and password iput

--- a/src/components/RegistrationModal/ChatDialogue/AuthInput/AuthInput.module.sass
+++ b/src/components/RegistrationModal/ChatDialogue/AuthInput/AuthInput.module.sass
@@ -27,6 +27,7 @@
       font-style: normal
       background-color: #e8f0fe
       border-radius: 8px
+
       &:hover
         .chat__input__icon
           &:before
@@ -35,20 +36,23 @@
     &__error
       background-color: #fff3f0
       color: #ff8469
+
       &:hover
         .chat__input__icon
           &:before
-            color: rgba(255,84,46,.50)
+            color: rgba(255, 84, 46, .50)
 
       .chat
         &__input
           background-color: #fff3f0
           color: #ff542e
+
           &__placeholder
             color: inherit
+
           &__icon
             &:before
-              color: rgba(255,84,46,.16)
+              color: rgba(255, 84, 46, .16)
 
     &__placeholder
       color: #a5a1b2
