fix: code style problems

--- a/src/components/RegistrationModal/ChatHeader/ChatHeader.module.sass
+++ b/src/components/RegistrationModal/ChatHeader/ChatHeader.module.sass
@@ -25,11 +25,15 @@
     background: none
     color: rgba(255, 255, 255, .80)
     font-family: iconfont, sans-serif
+    transition: .3s
 
     &:before
       font-size: 20px
       cursor: pointer
       content: "\E093"
+
+    &:hover
+      color: white
 
   &_progress
     width: 100%
