--- a/src/components/RegistrationModal/RegistrationModal.module.sass
+++ b/src/components/RegistrationModal/RegistrationModal.module.sass
@@ -1,3 +1,5 @@
+@use '/src/styles/vars'
+
 .chat
   &__container
     position: absolute
@@ -10,3 +12,4 @@
     width: 100vw
     z-index: 3
     background-color: rgba(7, 5, 14, 0.99)
+    @include vars.modalInitAnimation
