--- a/src/components/SearchModal/SearchModal.module.sass
+++ b/src/components/SearchModal/SearchModal.module.sass
@@ -1,12 +1,15 @@
+@use '/src/styles/vars'
+
 .search
-  width: 100%
-  height: 100%
+  width: 100vw
+  min-height: 100%
   position: fixed
   top: 0
   left: 0
   z-index: 3
   background-color: rgba(7,5,14,.96)
   -webkit-font-smoothing: antialiased
+  @include vars.modalInitAnimation
 
   &__title
     font-size: 40px
