feat: change slices logic, remove background header hover on mobile devices

--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -58,3 +58,10 @@
       &-active
         opacity: 0
         @include dropDownActive
+
+@media screen and (max-width: 600px)
+  .header
+    &__content
+      justify-content: unset
+      padding: 0
+      width: 100%
