--- a/src/components/RegistrationModal/AuthModal.module.sass
+++ b/src/components/RegistrationModal/AuthModal.module.sass
@@ -8,7 +8,7 @@
     align-items: center
     top: 0
     left: 0
-    min-height: 100%
+    min-height: 100vh
     width: 100vw
     z-index: 10
     background-color: rgba(7, 5, 14, 0.99)
