--- a/src/components/RegistrationModal/AuthModal.module.sass
+++ b/src/components/RegistrationModal/AuthModal.module.sass
@@ -2,7 +2,7 @@
 
 .chat
   &__container
-    position: absolute
+    position: fixed
     display: flex
     flex-direction: column
     align-items: center
