feat: movie page

--- a/src/UI/CustomButton/CustomButton.module.sass
+++ b/src/UI/CustomButton/CustomButton.module.sass
@@ -44,7 +44,7 @@
   &_red
     background-color: vars.$accent
     border-color: vars.$accent
-   
+
     &:hover, &:focus-visible
       background-color: #ff0f4d
       border-color: #ff0f4d
@@ -60,3 +60,11 @@
   &_icon
     width: 40px
     padding: 0
+
+  &_dark
+    background-color: rgba(255,255,255,.08)
+    border: rgba(255,255,255,.08)
+    color: vars.$textcolor
+    &:hover
+      background-color: rgba(255,255,255,.16)
+      border: rgba(255,255,255,.16)
