refactor: slider component

--- a/src/UI/Slider/Slider.module.sass
+++ b/src/UI/Slider/Slider.module.sass
@@ -1,11 +1,6 @@
 
 .row
-    overflow: hidden
-    margin: 0 -20px
-    padding: 24px 20px
+  position: relative
 
 .swiper
-    overflow: visible
-    display: flex
-    align-items: center
-    user-select: none
+  padding-top: 20px
