--- a/src/UI/FilmCard/FilmCard.module.sass
+++ b/src/UI/FilmCard/FilmCard.module.sass
@@ -22,7 +22,7 @@
 
     &:hover
         .slide__filter
-            transform: scale(1.04) translateY(0)
+            transform: scale(1.05) translateY(0)
             &::after
                 background: rgba(7,5,14,.8)
 
@@ -41,32 +41,34 @@
         transform-origin: 50% 100%
         border-radius: 8px
         overflow: hidden
-        transition: .3s
+        transition: .2s
         display: flex
         justify-content: center
+        align-items: center
+        transform: scale(1.0001)
 
         &::after
             content: ''
-            width: 100%
-            height: 100%
+            width: 110%
+            height: 110%
             position: absolute
-            z-index: 2
-            top: 0
-            left: 0
-            transition: .3s
+            z-index: 1
+            transition: .2s
 
     &__bottom
         margin-top: 8px
 
     &__title
         color: #d9d7e0
-        transition: .3s
 
     &__type
         font-size: 13px
 
-        &_active
+        &_subscription
             color: #ea003d
+
+        &_purchase
+            color: #00a5ff
 
 .icons
     display: flex
@@ -74,7 +76,7 @@
     position: absolute
     top: 20px
     right: 20px
-    z-index: 4
+    z-index: 3
 
     &__button
         margin-bottom: 10px
@@ -112,7 +114,7 @@
     position: absolute
     width: 80%
     bottom: 20px
-    z-index: 3
+    z-index: 2
     &__row
         display: flex
         align-items: center
@@ -123,6 +125,15 @@
         color: #d9d7e0
         line-height: 16px
         z-index: 1
+
+.age
+    width: 24px
+    height: 16px
+    background-image: url(/images/age16.svg)
+    position: absolute
+    right: 4px
+    bottom: 4px
+    z-index: 1
 
 .grade
     margin-right: 8px
