feat: add prevent default to custom button

--- a/src/UI/CustomButton/CustomButton.module.sass
+++ b/src/UI/CustomButton/CustomButton.module.sass
@@ -36,9 +36,11 @@
     height: 32px
     padding: 7px 11px
     background: linear-gradient(270deg,#ea003d 0,#c447ff 100%)
+    border: none
 
     &:hover, &:focus-visible
       background: linear-gradient(270deg,#ea003d 0,#c447ff 100%)
+      border: none
 
   &_red
     background-color: vars.$accent
