--- a/src/components/RegistrationModal/ChatDialogue/AuthInput/AuthInput.module.sass
+++ b/src/components/RegistrationModal/ChatDialogue/AuthInput/AuthInput.module.sass
@@ -10,6 +10,7 @@
     font-weight: 700
     font-style: normal
     background-color: #e8f0fe
+    width: calc(100% - 40px)
 
     &__container
       width: 290px
