--- a/src/UI/FilmSlider/FilmsSlider.module.sass
+++ b/src/UI/FilmSlider/FilmsSlider.module.sass
@@ -1,4 +1,11 @@
 
+.wrapper
+    padding: 24px 0
+
+.swiper
+    margin: 0 -20px
+    padding: 20px
+
 .title
     font-size: 24px
     color: #fff
@@ -18,7 +25,7 @@
     margin-left: 8px
 
 .prev, .next
-    height: 90%
+    top: 0
 
 @media (max-width: 600px)
     .title
