--- a/src/components/BannerSlider/BannerSlider.module.sass
+++ b/src/components/BannerSlider/BannerSlider.module.sass
@@ -4,8 +4,8 @@
     overflow: visible
 
 @media (min-width: 1350px)
-    .swiper__next
+    button.swiper__next
         right: -60px
 
-    .swiper__prev
+    button.swiper__prev
         left: -60px
