--- a/src/components/MovieCover/Medallions/Medallions.module.sass
+++ b/src/components/MovieCover/Medallions/Medallions.module.sass
@@ -6,6 +6,8 @@
   align-items: flex-start
   margin-bottom: 24px
   padding: 0 12px
+  overflow: hidden
+  height: 96px
 
 .medallion
   display: flex
@@ -53,6 +55,10 @@
     line-height: 16px
     transition: .3s
 
+@media (max-width: 1160px)
+  .medallions
+    grid-template-columns: repeat(6,1fr)
+
 @media (max-width: 600px)
   .medallion
     max-width: 72px
@@ -69,3 +75,16 @@
       font-size: 10px
       margin-top: 4px
       line-height: 12px
+
+  .medallions
+    height: 72px
+
+@media (max-width: 510px)
+  .medallions
+    grid-template-columns: repeat(5,1fr)
+    height: 72px
+
+@media (max-width: 400px)
+  .medallions
+    grid-template-columns: repeat(5,1fr)
+    height: 72px
