fix button position

--- a/src/components/MovieCover/Option/Option.module.sass
+++ b/src/components/MovieCover/Option/Option.module.sass
@@ -16,7 +16,7 @@
     padding: 12px 0
     line-height: 20px
     margin-top: 0
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1607843137)
+    border-bottom: 1px solid #ffffff29
     &:last-child
       border-bottom: 0
 
