fix: button position

--- a/src/UI/FilmSlider/FilmsSlider.module.sass
+++ b/src/UI/FilmSlider/FilmsSlider.module.sass
@@ -25,7 +25,8 @@
     margin-left: 8px
 
 .prev, .next
-    top: 0
+    height: calc(100% - 94px)
+    top: 20px
 
 @media (max-width: 600px)
     .title
