--- a/src/UI/SliderButtons/SliderButtons.module.sass
+++ b/src/UI/SliderButtons/SliderButtons.module.sass
@@ -4,7 +4,7 @@
     cursor: pointer
     z-index: 3
     position: absolute
-    height: calc(100% - 20px)
+    height: 100%
     width: 30px
     display: flex
     align-items: center
